# noshow-IQ--SAP-id-63050-

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  model.joblib  pyproject.toml  requirements.txt  smoke_test.py
.github/workflows/: ci-cd.yml  lint.yml
noshow_iq/: api.py  model.py  preprocess.py
tests/: test_noshow.py
